Bug 928727 - Don't clear before drawing with OPERATOR_SOURCE in DrawTargetCairo, since we know all required pixels will be clear already. r=jrmuizel